--- a/file-id/droid-wrapper/pom.xml
+++ b/file-id/droid-wrapper/pom.xml
@@ -3,9 +3,9 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>tika-addons</artifactId>
         <groupId>org.tallison</groupId>
-        <version>1.19-SNAPSHOT</version>
+        <artifactId>file-id</artifactId>
+        <version>0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
