--- a/extract-emitter/pom.xml
+++ b/extract-emitter/pom.xml
@@ -16,7 +16,7 @@
     <maven.compiler.target>11</maven.compiler.target>
     <java.version>11</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <tika.version>2.4.2-SNAPSHOT</tika.version>
+    <tika.version>2.5.0</tika.version>
     <log4j2.version>2.18.0</log4j2.version>
   </properties>
   <dependencies>
@@ -39,6 +39,16 @@
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-slf4j-impl</artifactId>
       <version>${log4j2.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.tika</groupId>
+      <artifactId>tika-emitter-jdbc</artifactId>
+      <version>${tika.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.4.1</version>
     </dependency>
   </dependencies>
   <build>
