--- a/tika-package-examples/pom.xml
+++ b/tika-package-examples/pom.xml
@@ -14,9 +14,20 @@
   <properties>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
-    <tika.version>2.2.1</tika.version>
+    <tika.version>2.8.0</tika.version>
   </properties>
 
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.apache.tika</groupId>
+        <artifactId>tika-bom</artifactId>
+        <version>2.8.0</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
   <dependencies>
 
     <dependency>
@@ -88,7 +99,24 @@
         <configuration>
           <fail>true</fail>
           <excludeCoordinates>
-            <!--            <coordinate>            </coordinate> -->
+            <exclude>
+              <groupId>com.drewnoakes</groupId>
+              <artifactId>metadata-extractor</artifactId>
+              <version>2.18.0</version>
+            </exclude>
+            <exclude>
+              <!-- sonatype https://github.com/google/guava/issues/4011 -->
+              <groupId>com.google.guava</groupId>
+              <artifactId>guava</artifactId>
+              <version>31.1-jre</version>
+            </exclude>
+            <exclude>
+              <!-- the most recent cve in sonatype for this artifact is 2.11.0,
+                  not at all the version we're using...smh-->
+              <groupId>xerces</groupId>
+              <artifactId>xercesImpl</artifactId>
+              <version>2.12.2</version>
+            </exclude>
           </excludeCoordinates>
         </configuration>
         <executions>
